<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iTracing2</string>
    <string name="ble_not_supported">sorry bluetooth LE is not supported on your device</string>
    <string name="action_scan_start">detect</string>
    <string name="beacon_not_found">keyring not found</string>
    <string name="action_connect">connect</string>
    <string name="start_immediate_alert">start ringing the keyring</string>
    <string name="stop_immediate_alert">stop ringing the keyring</string>
    <string name="link_background">allways-on</string>
    <string name="stop_ring">stop ring</string>
    <string name="stop_vibrate">stop vibration</string>
    <string name="simple_button_action">simple click options</string>
    <string name="simple_button_action_summary">what is the button action ?</string>
    <string name="double_button_action">double click options</string>
    <string name="double_button_action_summary">what is the button action ?</string>
    <string name="link_background_summary">allows to activate more options</string>
    <string name="battery_info">battery info</string>
    <string name="immediate_alert_summary">click here to alert the keyring</string>
    <string name="welcome_text">Welcome on iTracing2.\n\nThis application allows you to communicate with your iSee (Quintic PROXR) bluetooth device.\n
        If like me, the poorest application "iTracing" disturbs you, enjoy to use my own version :)\n\n
        Please click on the magnifying glass button to find you iSee device (it should be named "Quintic PROXR").\n\n
        If nothing is detected, a box appears containing all detected compatibles devices.\n
        If this box is empty, you should reboot your iTag (because is a cheap device) and retry.\n\n
        Note that loss link and iTag button feature are available only with "background link" option.\n\n
        Keep in mind that i develop iTracing2 only on my free time ;-)</string>
    <string name="donate">donate (PayPal)</string>
    <string name="feedback">feedback</string>
    <string name="donate_summary">to support my work :)</string>
    <string name="feedback_summary">feel free to improve this product</string>
    <string name="display_last_position">display the last recorded position</string>
    <string name="out_of_range_action">out of range action</string>
    <string name="out_of_range_action_summary">triggered when disconnection occurs</string>
    <string name="action_on_power_off">link is lost on power off</string>
    <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
    <string name="action_bip_out_of_range">iTag beep</string>
    <string name="action_bip_out_of_range_summary">beep if out of range</string>
    <string name="ring_tone_summary">select the ringtone for actions</string>
    <string name="ring_tone">ring tone</string>
    <string name="rssi_info">rssi info</string>
    <string name="actions">keyring actions</string>
    <string name="select_device">select a device</string>
    <string name="ring_tone_not_found">ring tone not found! please select an another, be sure you have a default ring tone, or that sound volume is up.</string>
    <string name="vibrator_not_found">vibrator not found! please be sure that you have this feature on your phone.</string>
    <string name="something_goes_wrong">something goes wrong!</string>
    <string name="double_button_delay">Double click delay</string>
    <string name="double_button_delay_summary">delay between two clicks (300ms if empty)</string>
    <string name="default_double_button_delay">300</string>
    <string name="custom_action">custom action</string>
    <string name="custom_action_summary">http(s)://.. or intent action string</string>
    <string name="remove">remove the keyring</string>
    <string name="confirm_remove_keyring">Confirm to remove this keyring</string>
    <string name="confirm_change_name">Confirm to change the keyring name</string>
    <string name="link_loss_disabled">disable this feature may occurs ringing your key ring</string>
    <string name="foreground_started">started in foreground mode</string>
    <string name="preferences">preferences</string>
    <string name="dashboard">dashboard</string>
    <string name="action_foreground_summary">improves the link between the smartphone and the devices</string>
    <string name="action_foreground">foreground mode</string>
    <string name="ring_the_device">ring the keyring</string>
    <string name="events_history">events history</string>
    <string name="connected_action">on connected action</string>
    <string name="connected_action_summary">triggered when connection occurs</string>
    <string name="clear_events">clear all events</string>
    <string name="confirm_remove_events">Confirm events deletion</string>
    <string name="export_events">export the events</string>
    <string-array name="button_actions">
        <item>toggle ring the phone</item>
        <item>start ring the phone</item>
        <item>stop ring the phone</item>
        <item>toggle vibrate the phone</item>
        <item>start vibrate the phone</item>
        <item>stop vibrate the phone</item>
        <item>capture my position</item>
        <item>toggle AudioManager Play/Pause</item>
        <item>call a url or broadcast intent action</item>
    </string-array>
    <string-array name="button_actions_values">
        <item>TOGGLE_RING_PHONE</item>
        <item>START_RING_PHONE</item>
        <item>STOP_RING_PHONE</item>
        <item>TOGGLE_VIBRATE_PHONE</item>
        <item>START_VIBRATE_PHONE</item>
        <item>STOP_VIBRATE_PHONE</item>
        <item>CAPTURE_POSITION</item>
        <item>TOGGLE_PLAY_PAUSE</item>
        <item>CUSTOM_ACTION</item>
    </string-array>
    <string-array name="empty_array"/>
</resources>
