<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/simple_button_action">
        <MultiSelectListPreference
                android:key="action_simple_button_list"
                android:title="@string/simple_button_action"
                android:summary="@string/simple_button_action_summary"
                android:entries="@array/button_actions"
                android:entryValues="@array/button_actions_values"
                android:defaultValue="@array/empty_array"/>
        <Preference
                android:title="@string/ring_tone"
                android:summary="@string/ring_tone_summary"
                android:key="ring_tone_single_click"/>
        <EditTextPreference
                android:title="@string/custom_action"
                android:summary="@string/custom_action_summary"
                android:key="custom_action_single_click"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/double_button_action">
        <MultiSelectListPreference
                android:key="action_double_button_list"
                android:title="@string/double_button_action"
                android:summary="@string/double_button_action_summary"
                android:entries="@array/button_actions"
                android:entryValues="@array/button_actions_values"
                android:defaultValue="@array/empty_array"/>
        <Preference
                android:title="@string/ring_tone"
                android:summary="@string/ring_tone_summary"
                android:key="ring_tone_double_click"/>
        <EditTextPreference
                android:title="@string/custom_action"
                android:summary="@string/custom_action_summary"
                android:key="custom_action_double_click"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/out_of_band_action">
        <MultiSelectListPreference
                android:key="action_out_of_band_list"
                android:title="@string/out_of_band_action"
                android:summary="@string/out_of_band_action_summary"
                android:entries="@array/button_actions"
                android:entryValues="@array/button_actions_values"
                android:defaultValue="@array/empty_array"/>
        <CheckBoxPreference
                android:key="action_on_power_off"
                android:title="@string/action_on_power_off"
                android:summary="@string/action_on_power_off_summary"
                android:dependency="action_out_of_band_list"/>
        <Preference
                android:title="@string/ring_tone"
                android:summary="@string/ring_tone_summary"
                android:key="ring_tone_out_of_band"/>
        <EditTextPreference
                android:title="@string/custom_action"
                android:summary="@string/custom_action_summary"
                android:key="custom_action_out_of_band"/>
    </PreferenceCategory>
</PreferenceScreen>